--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
 
+
+
   <nav class="container">
     <div class="c">
       <img
@@ -43,6 +45,17 @@
         <i class="fas fa-ellipsis-v"></i>
       </div>
     </div>
+
+     <div class="dote">
+    <i class="fa fa-ellipsis-v"></i> <!-- 3 dots -->
+
+    <!-- Hidden dropdown with icons -->
+    <div class="dropdown">
+      <a href="#" class="cart"><i class="fa fa-shopping-cart"></i></a>
+      <a href="#" class="become"><i class="fa fa-user-plus"></i></a>
+      <a href="#" class="login"><i class="fa fa-sign-in"></i></a>
+    </div>
+  </div>
   </nav>
 
   <div class="banner-layout">
