--- a/index.html
+++ b/index.html
@@ -12,51 +12,48 @@
 <body>
 
 
-
-  <nav class="container">
-    <div class="c">
-      <img
-        src="https://static-assets-web.flixcart.com/batman-returns/batman-returns/p/images/fkheaderlogo_exploreplus-44005d.svg" />
-
-
-
-
-      <div class="search-wrapper">
-        <input class="inp" placeholder="Search" />
-        <i class="fa-solid fa-magnifying-glass"></i>
-      </div>
-    </div>
-
-
-    <div class="p">
-      <div class="login">
-        <i class="fa-regular fa-circle-user"></i>
-        <button>Login</button>
-      </div>
-      <div class="cart">
-        <i class="fa-solid fa-cart-shopping"></i>
-        <span>Cart</span>
-      </div>
-      <div class="become">
-        <i class="fas fa-store"></i>
-        <span>Become a Sellr</span>
-      </div>
-      <div class="dote">
-        <i class="fas fa-ellipsis-v"></i>
-      </div>
-    </div>
-
-     <div class="dote">
-    <i class="fa fa-ellipsis-v"></i> <!-- 3 dots -->
-
-    <!-- Hidden dropdown with icons -->
-    <div class="dropdown">
-      <a href="#" class="cart"><i class="fa fa-shopping-cart"></i></a>
-      <a href="#" class="become"><i class="fa fa-user-plus"></i></a>
-      <a href="#" class="login"><i class="fa fa-sign-in"></i></a>
+<nav class="container">
+  <div class="c">
+    <img
+      src="https://static-assets-web.flixcart.com/batman-returns/batman-returns/p/images/fkheaderlogo_exploreplus-44005d.svg" />
+    <div class="search-wrapper">
+      <input class="inp" placeholder="Search" />
+      <i class="fa-solid fa-magnifying-glass"></i>
     </div>
   </div>
-  </nav>
+
+  <div class="p">
+    <div class="login">
+      <i class="fa-regular fa-circle-user"></i>
+      <button>Login</button>
+    </div>
+    <div class="cart">
+      <i class="fa-solid fa-cart-shopping"></i>
+      <span>Cart</span>
+    </div>
+    <div class="become">
+      <i class="fas fa-store"></i>
+      <span>Become a Seller</span>
+    </div>
+
+    <!-- 3 dot menu with hidden checkbox -->
+    <div class="dote">
+      <input type="checkbox" id="menu-toggle" hi />
+      <label for="menu-toggle" class="dots">
+        <i class="fa fa-ellipsis-v"></i>
+      </label>
+
+      <!-- dropdown -->
+      <div class="dropdown">
+        <a href="#" class="cart"><i class="fa fa-shopping-cart"></i></a>
+        <a href="#" class="become"><i class="fa fa-user-plus"></i></a>
+        <a href="#" class="login"><i class="fa fa-sign-in"></i></a>
+        <a href="#" class="search"><i class="fa fa-search"></i></a>
+      </div>
+    </div>
+  </div>
+</nav>
+
 
   <div class="banner-layout">
     <div class="banner">
